[gd_scene load_steps=10 format=3 uid="uid://bkotauwdmyrwi"]

[ext_resource type="PackedScene" uid="uid://dfbk3aknjha83" path="res://Models/LilBot.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://she7pqw8wik8" path="res://GameObjects/clock.tscn" id="2_14epn"]
[ext_resource type="Texture2D" uid="uid://cd2bri2xbdoyr" path="res://Sprites/z.svg" id="6_qrg6f"]
[ext_resource type="Material" uid="uid://064ko04ie1ui" path="res://Models/PlayerAntennaCap.material" id="8"]
[ext_resource type="Material" uid="uid://b725bkffgvsqq" path="res://Models/PlayerMetal.material" id="9"]
[ext_resource type="Script" path="res://Scripts/Menu.gd" id="10"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6puvu"]
albedo_color = Color(0.796078, 0.745098, 0.498039, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_cqugi"]
material = SubResource("StandardMaterial3D_6puvu")
size = Vector2(200, 200)

[sub_resource type="Environment" id="17"]
background_mode = 1
ambient_light_color = Color(1, 1, 1, 1)

[node name="Menu" type="Node3D" node_paths=PackedStringArray("clock", "clock_timer")]
process_mode = 3
script = ExtResource("10")
clock = NodePath("Clock")
clock_timer = NodePath("LilBot4/Timer")

[node name="Wall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 5.012, 0, -10.0195)
visible = false
mesh = SubResource("PlaneMesh_cqugi")

[node name="Clock" parent="." instance=ExtResource("2_14epn")]
transform = Transform3D(10, 0, 0, 0, -9.70393e-09, -10, 0, 0.222, -4.37114e-07, 5.012, 0, -10)

[node name="LilBot" parent="." instance=ExtResource("2")]
transform = Transform3D(0.295303, 0.40348, 0.866025, 0.80696, -0.590606, 0, 0.511479, 0.698848, -0.5, 6.06, 0.11, -6.863)

[node name="LilBot2" parent="." instance=ExtResource("2")]
transform = Transform3D(-0.984808, 0.127822, -0.117538, 0, 0.676876, 0.736097, 0.173648, 0.724914, -0.666593, 0.055, 4, -8.004)

[node name="LilBot3" parent="." instance=ExtResource("2")]
transform = Transform3D(-0.633938, -0.0640106, -0.770731, 0.303327, 0.896142, -0.323917, 0.711418, -0.439127, -0.548682, -5.217, -3.515, -8.004)

[node name="LilBot4" parent="." instance=ExtResource("2")]
transform = Transform3D(-0.758063, -0.0783438, 0.647458, -0.271916, 0.940323, -0.204586, -0.592791, -0.331143, -0.734127, 2.0899, -2, -4.204)

[node name="AnttenaSphere" parent="LilBot4/RobotMasterPos/Antenna" index="0"]
surface_material_override/0 = ExtResource("8")

[node name="Body" parent="LilBot4/RobotMasterPos" index="3"]
surface_material_override/0 = ExtResource("9")

[node name="Timer" type="Timer" parent="LilBot4"]
wait_time = 12.0
autostart = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.175, 0, 2)
environment = SubResource("17")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.12571)
light_energy = 5.0
omni_range = 15.6925

[node name="Main" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Main"]
layout_mode = 1
offset_left = 19.0
offset_top = 23.0
offset_right = 296.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.968627, 1)
theme_override_font_sizes/font_size = 50
text = "    enith Bots
"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main/Label"]
modulate = Color(0.0745098, 0.0745098, 0.968627, 1)
layout_mode = 0
offset_left = 14.0
offset_top = 17.0
offset_right = 54.0
offset_bottom = 57.0
texture = ExtResource("6_qrg6f")
expand_mode = 1

[node name="Play" type="Button" parent="Main"]
layout_mode = 0
offset_left = 93.9409
offset_top = 95.0
offset_right = 243.941
offset_bottom = 145.0
rotation = 0.261799
text = "Play Classic"

[node name="PlayMultiplayer" type="Button" parent="Main"]
layout_mode = 0
offset_left = 93.9409
offset_top = 157.0
offset_right = 243.941
offset_bottom = 207.0
rotation = 0.261799
text = "Play Multiplayer"

[node name="Quit" type="Button" parent="Main"]
layout_mode = 0
offset_left = 93.9409
offset_top = 221.0
offset_right = 243.941
offset_bottom = 271.0
rotation = 0.261799
text = "Quit"

[node name="Name" type="Label" parent="Main"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -47.0
offset_right = 230.0
offset_bottom = -16.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.937255, 0.870588, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "by Jcodefox (foxtatoe) & ninjason"

[node name="Multiplayer" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="Multiplayer"]
layout_mode = 1
offset_left = 19.0
offset_top = 23.0
offset_right = 319.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.968627, 1)
theme_override_font_sizes/font_size = 50
text = "    enith Bots
"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Multiplayer/Label2"]
modulate = Color(0.0745098, 0.0745098, 0.968627, 1)
layout_mode = 0
offset_left = 14.0
offset_top = 17.0
offset_right = 54.0
offset_bottom = 57.0
texture = ExtResource("6_qrg6f")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Multiplayer"]
layout_mode = 0
offset_left = 51.0
offset_top = 90.0
offset_right = 301.0
offset_bottom = 227.0

[node name="IP" type="LineEdit" parent="Multiplayer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Server IP"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Multiplayer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Name" type="LineEdit" parent="Multiplayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Username"
alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="Multiplayer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0, 0, 1, 1)
edit_alpha = false

[node name="HBoxContainer2" type="HBoxContainer" parent="Multiplayer/VBoxContainer"]
layout_mode = 2

[node name="Join" type="Button" parent="Multiplayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join Game"

[node name="Host" type="Button" parent="Multiplayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host Game"

[node name="Back" type="Button" parent="Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Main/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/PlayMultiplayer" to="." method="_on_play_multiplayer_pressed"]
[connection signal="pressed" from="Main/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Multiplayer/VBoxContainer/HBoxContainer2/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Multiplayer/VBoxContainer/HBoxContainer2/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Multiplayer/VBoxContainer/Back" to="." method="_on_back_pressed"]

[editable path="LilBot4"]
